# backend/api/gen/go/admin/service/v1/i_oss.pb.go
@@ -1,86 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.36.11
-// 	protoc        (unknown)
-// source: admin/service/v1/i_oss.proto
-
-package adminpb
-
-import (
-	_ "github.com/google/gnostic/openapiv3"
-	v1 "go-wind-admin/api/gen/go/file/service/v1"
-	_ "google.golang.org/genproto/googleapis/api/annotations"
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	unsafe "unsafe"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-var File_admin_service_v1_i_oss_proto protoreflect.FileDescriptor
-
-const file_admin_service_v1_i_oss_proto_rawDesc = "" +
-	"\n" +
-	"\x1cadmin/service/v1/i_oss.proto\x12\x10admin.service.v1\x1a$gnostic/openapi/v3/annotations.proto\x1a\x1cgoogle/api/annotations.proto\x1a\x19file/service/v1/oss.proto2\xcf\x04\n" +
-	"\n" +
-	"OssService\x12\xa8\x01\n" +
-	"\x15GetUploadPresignedUrl\x12-.file.service.v1.GetUploadPresignedUrlRequest\x1a..file.service.v1.GetUploadPresignedUrlResponse\"0\x82\xd3\xe4\x93\x02*:\x01*\"%/admin/v1/file/oss/upload-presign-url\x12\x8c\x01\n" +
-	"\x0eGetDownloadUrl\x12'.file.service.v1.GetDownloadInfoRequest\x1a(.file.service.v1.GetDownloadInfoResponse\"'\x82\xd3\xe4\x93\x02!\x12\x1f/admin/v1/file/oss/download-url\x12~\n" +
-	"\vListOssFile\x12#.file.service.v1.ListOssFileRequest\x1a$.file.service.v1.ListOssFileResponse\"$\x82\xd3\xe4\x93\x02\x1e\x12\x1c/admin/v1/file/oss/file-list\x12\x86\x01\n" +
-	"\rDeleteOssFile\x12%.file.service.v1.DeleteOssFileRequest\x1a&.file.service.v1.DeleteOssFileResponse\"&\x82\xd3\xe4\x93\x02 *\x1e/admin/v1/file/oss/delete-fileB\xb6\x01\n" +
-	"\x14com.admin.service.v1B\tIOssProtoP\x01Z1go-wind-admin/api/gen/go/admin/service/v1;adminpb\xa2\x02\x03ASX\xaa\x02\x10Admin.Service.V1\xca\x02\x10Admin\\Service\\V1\xe2\x02\x1cAdmin\\Service\\V1\\GPBMetadata\xea\x02\x12Admin::Service::V1b\x06proto3"
-
-var file_admin_service_v1_i_oss_proto_goTypes = []any{
-	(*v1.GetUploadPresignedUrlRequest)(nil),  // 0: file.service.v1.GetUploadPresignedUrlRequest
-	(*v1.GetDownloadInfoRequest)(nil),        // 1: file.service.v1.GetDownloadInfoRequest
-	(*v1.ListOssFileRequest)(nil),            // 2: file.service.v1.ListOssFileRequest
-	(*v1.DeleteOssFileRequest)(nil),          // 3: file.service.v1.DeleteOssFileRequest
-	(*v1.GetUploadPresignedUrlResponse)(nil), // 4: file.service.v1.GetUploadPresignedUrlResponse
-	(*v1.GetDownloadInfoResponse)(nil),       // 5: file.service.v1.GetDownloadInfoResponse
-	(*v1.ListOssFileResponse)(nil),           // 6: file.service.v1.ListOssFileResponse
-	(*v1.DeleteOssFileResponse)(nil),         // 7: file.service.v1.DeleteOssFileResponse
-}
-var file_admin_service_v1_i_oss_proto_depIdxs = []int32{
-	0, // 0: admin.service.v1.OssService.GetUploadPresignedUrl:input_type -> file.service.v1.GetUploadPresignedUrlRequest
-	1, // 1: admin.service.v1.OssService.GetDownloadUrl:input_type -> file.service.v1.GetDownloadInfoRequest
-	2, // 2: admin.service.v1.OssService.ListOssFile:input_type -> file.service.v1.ListOssFileRequest
-	3, // 3: admin.service.v1.OssService.DeleteOssFile:input_type -> file.service.v1.DeleteOssFileRequest
-	4, // 4: admin.service.v1.OssService.GetUploadPresignedUrl:output_type -> file.service.v1.GetUploadPresignedUrlResponse
-	5, // 5: admin.service.v1.OssService.GetDownloadUrl:output_type -> file.service.v1.GetDownloadInfoResponse
-	6, // 6: admin.service.v1.OssService.ListOssFile:output_type -> file.service.v1.ListOssFileResponse
-	7, // 7: admin.service.v1.OssService.DeleteOssFile:output_type -> file.service.v1.DeleteOssFileResponse
-	4, // [4:8] is the sub-list for method output_type
-	0, // [0:4] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
-}
-
-func init() { file_admin_service_v1_i_oss_proto_init() }
-func file_admin_service_v1_i_oss_proto_init() {
-	if File_admin_service_v1_i_oss_proto != nil {
-		return
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: unsafe.Slice(unsafe.StringData(file_admin_service_v1_i_oss_proto_rawDesc), len(file_admin_service_v1_i_oss_proto_rawDesc)),
-			NumEnums:      0,
-			NumMessages:   0,
-			NumExtensions: 0,
-			NumServices:   1,
-		},
-		GoTypes:           file_admin_service_v1_i_oss_proto_goTypes,
-		DependencyIndexes: file_admin_service_v1_i_oss_proto_depIdxs,
-	}.Build()
-	File_admin_service_v1_i_oss_proto = out.File
-	file_admin_service_v1_i_oss_proto_goTypes = nil
-	file_admin_service_v1_i_oss_proto_depIdxs = nil
-}
