# backend/api/gen/go/admin/service/v1/i_oss.pb.redact.go
@@ -1,85 +1,0 @@
-// Code generated by protoc-gen-redact. DO NOT EDIT.
-// source: admin/service/v1/i_oss.proto
-
-package adminpb
-
-import (
-	context "context"
-	redact "github.com/menta2k/protoc-gen-redact/v3/redact/v3"
-	filepb "go-wind-admin/api/gen/go/file/service/v1"
-	grpc "google.golang.org/grpc"
-	codes "google.golang.org/grpc/codes"
-	status "google.golang.org/grpc/status"
-)
-
-// Reference imports to suppress errors if they are not otherwise used.
-var (
-	_ grpc.Server
-	_ context.Context
-	_ redact.Redactor
-	_ codes.Code
-	_ status.Status
-	_ filepb.StorageObject
-)
-
-// RegisterRedactedOssServiceServer wraps the OssServiceServer with the redacted server and registers the service in GRPC
-func RegisterRedactedOssServiceServer(s grpc.ServiceRegistrar, srv OssServiceServer, bypass redact.Bypass) {
-	RegisterOssServiceServer(s, RedactedOssServiceServer(srv, bypass))
-}
-
-func RedactedOssServiceServer(srv OssServiceServer, bypass redact.Bypass) OssServiceServer {
-	if bypass == nil {
-		bypass = redact.Falsy
-	}
-	return &redactedOssServiceServer{srv: srv, bypass: bypass}
-}
-
-type redactedOssServiceServer struct {
-	UnsafeOssServiceServer
-	srv    OssServiceServer
-	bypass redact.Bypass
-}
-
-// GetUploadPresignedUrl is the redacted wrapper for the actual OssServiceServer.GetUploadPresignedUrl method
-// Unary RPC
-func (s *redactedOssServiceServer) GetUploadPresignedUrl(ctx context.Context, in *filepb.GetUploadPresignedUrlRequest) (*filepb.GetUploadPresignedUrlResponse, error) {
-	res, err := s.srv.GetUploadPresignedUrl(ctx, in)
-	if !s.bypass.CheckInternal(ctx) {
-		// Apply redaction to the response
-		redact.Apply(res)
-	}
-	return res, err
-}
-
-// GetDownloadUrl is the redacted wrapper for the actual OssServiceServer.GetDownloadUrl method
-// Unary RPC
-func (s *redactedOssServiceServer) GetDownloadUrl(ctx context.Context, in *filepb.GetDownloadInfoRequest) (*filepb.GetDownloadInfoResponse, error) {
-	res, err := s.srv.GetDownloadUrl(ctx, in)
-	if !s.bypass.CheckInternal(ctx) {
-		// Apply redaction to the response
-		redact.Apply(res)
-	}
-	return res, err
-}
-
-// ListOssFile is the redacted wrapper for the actual OssServiceServer.ListOssFile method
-// Unary RPC
-func (s *redactedOssServiceServer) ListOssFile(ctx context.Context, in *filepb.ListOssFileRequest) (*filepb.ListOssFileResponse, error) {
-	res, err := s.srv.ListOssFile(ctx, in)
-	if !s.bypass.CheckInternal(ctx) {
-		// Apply redaction to the response
-		redact.Apply(res)
-	}
-	return res, err
-}
-
-// DeleteOssFile is the redacted wrapper for the actual OssServiceServer.DeleteOssFile method
-// Unary RPC
-func (s *redactedOssServiceServer) DeleteOssFile(ctx context.Context, in *filepb.DeleteOssFileRequest) (*filepb.DeleteOssFileResponse, error) {
-	res, err := s.srv.DeleteOssFile(ctx, in)
-	if !s.bypass.CheckInternal(ctx) {
-		// Apply redaction to the response
-		redact.Apply(res)
-	}
-	return res, err
-}
