# backend/api/gen/go/file/service/v1/file.pb.redact.go
@@ -131,7 +131,7 @@ func (x *File) Redact() string {
 
 	// Safe field: LinkUrl
 
-	// Safe field: Md5
+	// Safe field: ContentHash
 
 	// Safe field: TenantId
 
