# backend/app/admin/service/cmd/server/wire_gen.go
@@ -70,10 +70,9 @@ func initApp(context *bootstrap.Context) (*kratos.App, func(), error) {
 	taskRepo := data.NewTaskRepo(context, entClient)
 	taskService := service.NewTaskService(context, taskRepo, userRepo)
 	minIOClient := data.NewMinIoClient(context)
-	ossService := service.NewOssService(context, minIOClient)
 	uEditorService := service.NewUEditorService(context, minIOClient)
 	fileRepo := data.NewFileRepo(context, entClient)
-	fileService := service.NewFileService(context, fileRepo)
+	fileService := service.NewFileService(context, fileRepo, minIOClient)
 	fileTransferService := service.NewFileTransferService(context, minIOClient, fileRepo)
 	dictTypeI18nRepo := data.NewDictTypeI18nRepo(context, entClient)
 	dictTypeRepo := data.NewDictTypeRepo(context, entClient, dictTypeI18nRepo)
@@ -112,7 +111,7 @@ func initApp(context *bootstrap.Context) (*kratos.App, func(), error) {
 	internalMessageService := service.NewInternalMessageService(context, internalMessageRepo, internalMessageCategoryRepo, internalMessageRecipientRepo, userRepo, sseServer, userTokenCacheRepo)
 	internalMessageCategoryService := service.NewInternalMessageCategoryService(context, internalMessageCategoryRepo)
 	internalMessageRecipientService := service.NewInternalMessageRecipientService(context, internalMessageRepo, internalMessageRecipientRepo)
-	httpServer, err := server.NewRestServer(context, v, authorizer, authenticationService, loginPolicyService, adminPortalService, taskService, ossService, uEditorService, fileService, fileTransferService, dictTypeService, dictEntryService, languageService, tenantService, userService, userProfileService, roleService, positionService, orgUnitService, menuService, apiService, permissionService, permissionGroupService, permissionAuditLogService, policyEvaluationLogService, loginAuditLogService, apiAuditLogService, operationAuditLogService, dataAccessAuditLogService, internalMessageService, internalMessageCategoryService, internalMessageRecipientService)
+	httpServer, err := server.NewRestServer(context, v, authorizer, authenticationService, loginPolicyService, adminPortalService, taskService, uEditorService, fileService, fileTransferService, dictTypeService, dictEntryService, languageService, tenantService, userService, userProfileService, roleService, positionService, orgUnitService, menuService, apiService, permissionService, permissionGroupService, permissionAuditLogService, policyEvaluationLogService, loginAuditLogService, apiAuditLogService, operationAuditLogService, dataAccessAuditLogService, internalMessageService, internalMessageCategoryService, internalMessageRecipientService)
 	if err != nil {
 		cleanup2()
 		cleanup()
